packages/svelte/tests/compiler-errors/samples/css-global-block-declaration/main.svelte
<style>
	.x :global {
		color: red;
	}
</style>
